Fix board height overflow, minor database changes (remove some HTML)

--- a/public/style/board.css
+++ b/public/style/board.css
@@ -7,12 +7,16 @@ html {
 
 body {
     background-color: black;
+    padding: 0;
+    margin: 0;
+    height: 100%;
 }
 
 ul {
     list-style-type: none;
     text-align: center;
     padding: 0;
+    margin: 0;
 }
 
 li {
